jaeger-query-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: linkerd
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/custom-request-headers: l5d-dst-override:katsanddogs-query.default.svc.cluster.local:8084
spec:
  rules:
  - host: query.jaeger.rusik.dev
    http:
      paths:
      - backend:
          serviceName: katsanddogs-query
          servicePort: 16686
