linkerd-grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: linkerd
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/custom-request-headers: l5d-dst-override:linkerd-grafana.linkerd.svc.cluster.local:3000
    traefik.ingress.kubernetes.io/auth-type: basic
    traefik.ingress.kubernetes.io/auth-secret: grafana-ingress-auth
spec:
  rules:
  - host: grafana.linkerd.rusik.dev
    http:
      paths:
      - backend:
          serviceName: linkerd-grafana
          servicePort: 3000
